--- a/coucou.css
+++ b/coucou.css
@@ -5,3 +5,11 @@
     border-radius: 20px;
     padding: 20px;
 }
+.box{
+    background-color: burlywood;
+    color: black;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 20px; 
+    
+}
